# ml1mpp-interface

./: .flaskenv  pyproject.toml
src/seqreceval_assessapp_movielens/: __init__.py
src/seqreceval_assessapp_movielens/commands/: __init__.py  utils.py
src/seqreceval_assessapp_movielens/commands/database/: __init__.py
src/seqreceval_assessapp_movielens/commands/database/assessment/: __init__.py  utils.py
src/seqreceval_assessapp_movielens/commands/database/condition/: __init__.py
src/seqreceval_assessapp_movielens/commands/database/interaction/: __init__.py  utils.py
src/seqreceval_assessapp_movielens/commands/preprocess/: __init__.py
src/seqreceval_assessapp_movielens/config/: __init__.py
src/seqreceval_assessapp_movielens/extensions/: __init__.py  login.py
src/seqreceval_assessapp_movielens/models/: assessment.py  interaction.py  utils.py
src/seqreceval_assessapp_movielens/static/script/: agreement.js  assessment.js  completion.js
src/seqreceval_assessapp_movielens/static/stylesheet/: assessment.css
src/seqreceval_assessapp_movielens/templates/: _base.html
src/seqreceval_assessapp_movielens/templates/assessor/: _macros.html  _manual.html  agreement.html  assessment.html  close.html  completion.html
src/seqreceval_assessapp_movielens/templates/sandbox/: _macros.html  assessment.html  session.html
src/seqreceval_assessapp_movielens/views/: __init__.py  sandbox.py
src/seqreceval_assessapp_movielens/views/assessor/: __init__.py  utils.py
tests/: test_seqreceval_assessapp_movielens.py
(+6 files in other folders)
