[tool.poetry]
name = "SeqRecEval-AssessApp-MovieLens"
version = "0.1.0"
description = ""
authors = ["Kazutoshi Umemoto <umemoto@tkl.iis.u-tokyo.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
Flask = "^2.0.2"
python-dotenv = "^0.19.2"
click = "^8.0.3"
requests = "^2.26.0"
tqdm = "^4.62.3"
jsonlines = "^3.0.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-Login = "^0.5.0"
PyMySQL = {version = "^1.0.2", optional = true}
gunicorn = {version = "^20.1.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.30.1"
flask-shell-ipython = "^0.4.1"

[tool.poetry.extras]
mysql = ["PyMySQL"]
gunicorn = ["gunicorn"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
